--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+
+  .flex-center-column {
+    @apply flex flex-col justify-center items-center;
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,6 +20,6 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 100%;
   overflow-x: hidden;
 }
