--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,11 +4,11 @@
 
 @layer components {
   .flex-center {
-    @apply flex justify-center items-center;
+    @apply flex items-center justify-center;
   }
 
   .flex-center-column {
-    @apply flex flex-col justify-center items-center;
+    @apply flex flex-col items-center justify-center;
   }
 }
 
@@ -22,4 +22,8 @@ html,
 body {
   max-width: 100%;
   overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
