--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,7 @@ body {
   background-color: black;
   max-width: 100%;
   overflow-x: hidden;
+  white-space: pre-wrap;
 }
 
 body::-webkit-scrollbar {
