--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,3 +1,4 @@
+/* faktumTest */
 @font-face {
   font-family: "faktumTest";
   font-style: normal;
@@ -22,10 +23,111 @@
     format("opentype");
 }
 
+/* futura */
 @font-face {
-  font-family: "faktumTest";
+  font-family: "futura";
+  font-style: normal;
+  font-weight: 100;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Futura/Futura-Light.ttf")
+    format("truetype");
+}
+@font-face {
+  font-family: "futura";
+  font-style: normal;
+  font-weight: 200;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Futura/Futura-ExtraLight.ttf")
+    format("truetype");
+}
+@font-face {
+  font-family: "futura";
   font-style: normal;
   font-weight: 400;
-  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/FaktumTest/Faktum_Test_Regular.otf")
-    format("opentype");
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Futura/Futura-Medium.ttf")
+    format("truetype");
+}
+@font-face {
+  font-family: "futura";
+  font-style: normal;
+  font-weight: 700;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Futura/Futura-SemiBold.ttf")
+    format("truetype");
+}
+@font-face {
+  font-family: "futura";
+  font-style: normal;
+  font-weight: 800;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Futura/Futura-Bold.ttf")
+    format("truetype");
+}
+
+/* pretendard */
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 100;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-Thin.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 200;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-ExtraLight.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 300;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-Light.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 400;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-Regular.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 500;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-Medium.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 600;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-SemiBold.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 700;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-Bold.woff")
+    format("woff");
+}
+
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 800;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-ExtraBold.woff")
+    format("woff");
+}
+@font-face {
+  font-family: "pretendard";
+  font-style: normal;
+  font-weight: 900;
+  src: url("https://d3gurpvil0se70.cloudfront.net/thirds/fonts/Pretendard/Pretendard-Black.woff")
+    format("woff");
 }
