fix : 폰트 cdn에 있는 거 가져오기

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
-@import "font.css";
+@import url("https://d3gurpvil0se70.cloudfront.net/thirds/css/ysmedi/font_20230607122900.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
