fix : 써팩트 웹 슬라이드 가운데 정렬
- flex를 최우선으로 설정해야 가운데 정렬이 먹힘

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,12 @@
   }
 }
 
+.therfect-slide-center {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
