fix : 써팩트 웹 높이 800px이하 대응

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,11 @@ td {
   padding-top: 30px;
   padding-bottom: 30px;
   vertical-align: baseline;
+
+  @media (max-height: 800px) {
+    padding-top: 17px;
+    padding-bottom: 17px;
+  }
 }
 
 table.mobile td {
